fix action arrow placement on mobile

--- a/src/components/Calendar/Calendar.module.scss
+++ b/src/components/Calendar/Calendar.module.scss
@@ -369,11 +369,11 @@
   }
 
   #leftArrow {
-    left: 25px;
+    left: 5px;
   }
   
   #rightArrow {
-    right: 25px;
+    right: 5px;
   }
 
   /* INDEX SLIDE STYLES */
